--- a/SX.WebCore/packages.config
+++ b/SX.WebCore/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Dapper" version="1.42" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EPPlus" version="4.0.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
