--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -166,26 +166,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\dist\css\grid-a-authors.min.css" />
-    <Content Include="Content\dist\css\grid-aphorisms.min.css" />
-    <Content Include="Content\dist\css\grid-banners.min.css" />
-    <Content Include="Content\dist\css\grid-pictures.min.css" />
-    <Content Include="Content\dist\css\grid-users.min.css" />
-    <Content Include="Content\dist\css\lightbox.min.css" />
-    <Content Include="Content\dist\css\login.min.css" />
-    <Content Include="Content\dist\css\ps-tree.min.css" />
-    <Content Include="Content\dist\css\site.min.css" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.svg" />
-    <Content Include="Content\dist\images\close.png" />
-    <Content Include="Content\dist\images\loading.gif" />
-    <Content Include="Content\dist\images\next.png" />
-    <Content Include="Content\dist\images\prev.png" />
-    <Content Include="Content\dist\i\bg.jpg" />
-    <Content Include="Content\dist\js\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Content\dist\js\jquery.validate.min.js" />
-    <Content Include="Content\dist\js\lightbox.min.js" />
-    <Content Include="Content\dist\js\site.min.js" />
-    <Content Include="faveicon.png" />
+    <Content Include="content\dist\css\grid-a-authors.min.css" />
+    <Content Include="content\dist\css\grid-aphorisms.min.css" />
+    <Content Include="content\dist\css\grid-banners.min.css" />
+    <Content Include="content\dist\css\grid-pictures.min.css" />
+    <Content Include="content\dist\css\grid-users.min.css" />
+    <Content Include="content\dist\css\lightbox.min.css" />
+    <Content Include="content\dist\css\login.min.css" />
+    <Content Include="content\dist\css\ps-tree.min.css" />
+    <Content Include="content\dist\css\site.min.css" />
+    <Content Include="content\dist\fonts\fontawesome-webfont.svg" />
+    <Content Include="content\dist\images\close.png" />
+    <Content Include="content\dist\images\loading.gif" />
+    <Content Include="content\dist\images\next.png" />
+    <Content Include="content\dist\images\prev.png" />
+    <Content Include="content\dist\i\bg.jpg" />
+    <Content Include="content\dist\i\faveicon.png" />
+    <Content Include="content\dist\js\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="content\dist\js\jquery.validate.min.js" />
+    <Content Include="content\dist\js\jquery.validate.unobtrusive.min.js" />
+    <Content Include="content\dist\js\lightbox.min.js" />
+    <Content Include="content\dist\js\site.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
@@ -194,11 +195,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="robots.txt" />
     <Content Include="packages.config" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.woff" />
-    <Content Include="Content\dist\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Content\dist\fonts\FontAwesome.otf" />
+    <Content Include="content\dist\fonts\fontawesome-webfont.eot" />
+    <Content Include="content\dist\fonts\fontawesome-webfont.ttf" />
+    <Content Include="content\dist\fonts\fontawesome-webfont.woff" />
+    <Content Include="content\dist\fonts\fontawesome-webfont.woff2" />
+    <Content Include="content\dist\fonts\FontAwesome.otf" />
     <None Include="Properties\PublishProfiles\admin-game-exe.pubxml" />
     <None Include="Properties\PublishProfiles\game-exe.pubxml" />
     <None Include="Properties\PublishProfiles\release.pubxml" />
