--- a/GE.WebAdmin/bower.json
+++ b/GE.WebAdmin/bower.json
@@ -25,6 +25,7 @@
     "bootstrap": "3.3.6",
     "font-awesome": "4.6.3",
     "jquery-ajax-unobtrusive": "3.2.4",
+    "jquery-validation-unobtrusive": "3.2.6",
     "jquery-validation": "1.15.0",
     "ckeditor": "4.5.7",
     "metisMenu": "2.4.3",
