--- a/GE.WebUI/bower.json
+++ b/GE.WebUI/bower.json
@@ -27,6 +27,7 @@
     "jquery-validation": "1.15.0",
     "jquery-ajax-unobtrusive": "3.2.4",
     "jquery-validation-unobtrusive": "3.2.6",
-    "jquery-lazy": "1.6.7"
+    "jquery-lazy": "1.6.7",
+    "goodshare": "3.2.8"
   }
 }
