--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Models\VMLCNB.cs" />
     <Compile Include="Models\VMLCNBCategory.cs" />
     <Compile Include="Models\VMLCNBNews.cs" />
+    <Content Include="content\dist\css\ap-author-page.min.css" />
     <Content Include="content\dist\css\error-page.min.css" />
     <Content Include="content\dist\css\site.min.css" />
     <Content Include="content\dist\css\test-list.min.css" />
@@ -373,6 +374,7 @@
     <Content Include="Views\SiteTests\Result.cshtml" />
     <Content Include="Views\SiteTests\_Step.cshtml" />
     <Content Include="Views\SiteTests\List.cshtml" />
+    <Content Include="Views\AuthorAphorisms\Details.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -382,7 +384,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="content\dist\i\temp\" />
-    <Folder Include="Views\AuthorAphorisms\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SX.WebCore\SX.WebCore\SX.WebCore.csproj">
