--- a/GE.WebAdmin/bower.json
+++ b/GE.WebAdmin/bower.json
@@ -27,11 +27,13 @@
     "jquery-ajax-unobtrusive": "3.2.4",
     "jquery-validation-unobtrusive": "3.2.6",
     "jquery-validation": "1.15.0",
-    "ckeditor":"4.5.9",
+    "ckeditor": "4.5.9",
     "metisMenu": "2.4.3",
     "eonasdan-bootstrap-datetimepicker": "*",
     "jquery": "2.2.3",
     "lightbox2": "2.8.2",
-    "raphael": "2.2.0"
+    "raphael": "2.2.0",
+    "angular": "1.5.7",
+    "signalr": "2.2.0"
   }
 }
