--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.61;Database=u0103269_gameexecom;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;" />-->
-    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=u0103269_gameexecom;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H2K9G16\SQLEXPRESS;Initial Catalog=u0103269_gameexecom;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -29,6 +29,9 @@
     <!--smtp-->
     <add key="NoReplyMail" value="noreply@game-exe.com" />
     <add key="NoReplyMailPassword" value="Luia124445#game-exe.com" />
+    <!--recaptcha-->
+    <add key="SiteSettingsGoogleRecaptchaSiteKey" value="6LfPXSYTAAAAALNd4uO0Vp8qQX8rmha7B9grIVFh" />
+    <add key="SiteSettingsGoogleRecaptchaSecretKey" value="6LfPXSYTAAAAAEIjaztA4OlM42MbCPA3Ieanll0W" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
