--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Controllers\BannersController.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
     <Compile Include="Controllers\HumorController.cs" />
+    <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\SiteQuetionsController.cs" />
     <Compile Include="Controllers\SiteTestsController.cs" />
     <Compile Include="Controllers\ValutesController.cs" />
@@ -376,6 +377,7 @@
     <Content Include="Views\Humor\Details.cshtml" />
     <Content Include="Views\Humor\Add.cshtml" />
     <Content Include="Views\SiteTests\_ResultNormal.cshtml" />
+    <Content Include="Views\Shared\_Rating.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
